credential file storing and sending problem solved